--- a/index.html
+++ b/index.html
@@ -11,76 +11,71 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="./dist/output.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="max-w-[687px] mx-auto">
+    <div class="max-w-[687px] w-full mx-auto p-5 md:p-0 ">
       <div class="flex items-center justify-between py-10">
         <div class="flex items-center gap-4">
           <img class="w-24 rounded-full" src="./img/Potrait.JPG" />
-          <div>
-            <h3 class="text-[36px] text-gray-900 font-semibold">Laksh Tyagi</h3>
-            <p class="text-[20px] text-gray-700 font-regular mt-[-8px]">
+          <div class="flex flex-col gap-0.5">
+            <h3 class=" text-[24px] md:text-[36px] text-gray-900 font-medium">Laksh Tyagi</h3>
+            <p class="text-[16px] md:text-[20px] text-gray-700 font-regular">
               Product Designer
             </p>
           </div>
         </div>
         <div class="grid grid-cols-3 gap-x-4 max-w-[250px]">
           <a href="https://dribbble.com/Laksh-Tyagi">
-            <img class="w-[23px] h-[23px] opacity-40" src="./img/Dribble.png" />
+            <img class="w-[24px] h-[24px] opacity-40 hover:opacity-60" src="./img/Dribbble1.svg" />
           </a>
           <a href="https://twitter.com/Laksh_Tyagi">
-            <img class="w-[25px] h-[25px] opacity-40" src="./img/Twitter.png" />
+            <img class="w-[24px] h-[24px] opacity-40 hover:opacity-60" src="./img/Twitter1.svg" />
           </a>
-          <a href="https://www.linkedin.com/in/laksh-tyagi-78a046241/">
+          <a href="https://www.linkedin.com/in/laksh-tyagi-78a046241/" class=" flex mt-[-2px]">
             <img
-              class="w-[22px] h-[22px] opacity-40"
-              src="./img/Linkedin.png"
+              class="w-[24px] h-[24px] opacity-40 hover:opacity-60"
+              src="./img/Linkdin1.svg"
             />
           </a>
         </div>
       </div>
       <div class="mt-[60px]">
-        <p class="text-[18px] leading-7 items-center mt-[60px]">
+        <p class="font-light text-[14px] md:text-[18px] md:leading-7 items-center mt-[60px]">
           Growing up with a passion for design, I have always had a unique eye
           to explore ideas. Design cannot be perfect but there stands a
           perpetual space for refinement.
         </p>
-        <p class="text-[18px] leading-7 mt-[50px]">
-          CS & Design Undergraduate at Northeastern University and a design
-          intern at samespace. I aim to get some experience which will help
-          sharpen my skill set for the real world.
+        <p class="font-light text-[14px] md:text-[18px] md:leading-7 mt-[40px]">
+          I am a CS & Design Undergraduate at Northeastern University and a design intern at samespace. I look forward to get some collabrative experience which will help enhance my skillset and understanding for the real world.
         </p>
       </div>
 
       <div class="flex flex-col">
-        <p class="font-medium text-[36px] mt-[100px]">Project</p>
-        <div class="grid grid-cols-10 gap-4 mt-[15px]">
-          <img
-            class="col-span-4 h-[220px] w-[290px] mt-[]"
-            src="./img/type1.png"
-          />
-          <div class="col-span-6 h-[220px] inline-block">
+        <p class="font-regular text-[28px] mt-[100px]">Project</p>
+        <div class="grid grid-cols-10 gap-8 mt-[15px] items-center">
+          <div class=" col-span-10 md:col-span-4">
+          <video width="100%" height="100%" autoplay="" playsinline="" muted="" loop="" class=" w-3/4 md:w-full"><source src="./img/vid.mp4" type="video/mp4"></video>
+          </div>
+          <div class="col-span-10 md:col-span-6 inline-block">
             <h3 class="text-[28px] text-gray-900">Type1</h3>
-            <p class="text-[18px] text-gray-700 mt-[15px]">
+            <p class=" font-light text-[18px] text-gray-700 mt-[15px]">
               Type1 eases diabtes by using seamless UI to get insulin doses with
               a snapshot.
             </p>
-            <p class="text-[18px] text-gray-400 w-[375px] mt-[15px]">
+            <p class="font-light text-[18px] text-gray-400  mt-[15px]">
               - Product & Brand Design
             </p>
-            <div class="grid grid-cols-2 gap-x-4 max-w-[250px] mt-[15px]">
+            <div class="flex  gap-2  mt-[40px]">
               <a
                 href="https://apps.apple.com/in/app/type1/id1543368559"
-                role="button"
-                class="flex flex-col items-center justify-center inline-flex items-center h-10 px-5 text-[12px] text-white transition-colors duration-150 bg-black rounded-lg focus:shadow-outline hover:bg-gray-900"
-              >
-                App Store
+                role="button" class=" font-light text-white bg-[#050708] hover:bg-[#050708]/90 focus:ring-4 focus:outline-none focus:ring-[#050708]/50 rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-[#050708]/50 dark:hover:bg-[#050708]/30 mr-2 mb-2">
+  <svg class="w-5 h-5 mr-2 -ml-1" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="apple" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C63.3 141.2 4 184.8 4 273.5q0 39.3 14.4 81.2c12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-61.9 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z"></path></svg>App Store
               </a>
               <a
                 href="https://type1.ai"
                 role="button"
-                class="flex flex-col items-center justify-center inline-flex items-center h-10 px-5 text-[12px] text-black transition-colors duration-150 bg-gray-100 rounded-lg border focus:shadow-outline hover:border-gray-300"
+                class="flex flex-col items-center justify-center h-10 px-5 text-sm font-light text-black transition-colors duration-150 bg-gray-100 rounded-lg border focus:shadow-outline hover:border-gray-300"
               >
                 Website
               </a>
@@ -89,51 +84,50 @@
         </div>
       </div>
       <div class="max-w-[688px] mx-auto">
-        <p class="font-medium text-[36px] mt-[100px]">Tools & Languages</p>
-        <div class="grid grid-cols-6 mt-[20px]">
+        <p class="font-regular text-[28px] mt-[100px]">Tools & Languages</p>
+        <div class="grid grid-cols-3 md:grid-cols-6 mt-[20px]">
           <a class="flex flex-col items-center justify-center">
-            <div class="w-[74px] h-[74px]">
-              <img src="./img/Figma.png" class="w-[74px] h-[74px]" />
+            <div>
+              <img src="./img/Figma.svg" class="w-[115px] h-[115px]" />
             </div>
-            <h3 class="mt-2 text-sm text-gray-400 items-center">Figma</h3>
+            <h3 class=" text-[12px] md:text-sm text-gray-400 items-center">Figma</h3>
           </a>
 
           <a class="flex flex-col items-center justify-center">
-            <div class="w-[74px] h-[74px]">
-              <img src="./img/Framer.png" class="w-[74px] h-[74px]" />
+            <div>
+              <img src="./img/Framer.svg" class="w-[115px] h-[115px]" />
             </div>
-            <h3 class="mt-2 text-sm text-gray-400">Framer</h3>
+            <h3 class=" text-[12px] md:text-sm text-gray-400">Framer</h3>
           </a>
 
           <a class="flex flex-col items-center justify-center">
-            <div class="w-[74x] h-[74px]">
-              <img src="./img/XD.png" class="w-[74px] h-[74px]" />
+            <div>
+              <img src="./img/XD.svg" class="w-[115px] h-[115px]" />
             </div>
-            <h3 class="mt-2 text-sm text-gray-400">Adobe XD</h3>
+            <h3 class=" text-[12px] md:text-sm text-gray-400">Adobe XD</h3>
+          </a>
+
+          <a class="flex flex-col items-center justify-center">
+            <div>
+              <img src="./img/Python.svg" class="w-[115px] h-[115px]" />
+            </div>
+            <h3 class=" text-[12px] md:text-sm text-gray-400 items-center">Python</h3>
+          </a>
+  
+          <a class="flex flex-col items-center justify-center">
+            <div>
+              <img src="./img/html.svg" class="w-[115px] h-[115px]" />
+            </div>
+            <h3 class=" text-[12px] md:text-sm text-gray-400">html</h3>
           </a>
         </div>
       </div>
 
-      <div class="grid grid-cols-6 mt-[20px]">
-        <a class="flex flex-col items-center justify-center">
-          <div class="w-[50px] h-[50px]">
-            <img src="./img/Python.png" class="w-[50px] h-[50px]" />
-          </div>
-          <h3 class="mt-2 text-sm text-gray-400 items-center">Python</h3>
-        </a>
-
-        <a class="flex flex-col items-center justify-center">
-          <div class="w-[50px] h-[50px]">
-            <img src="./img/html.png" class="w-[50px] h-[50px]" />
-          </div>
-          <h3 class="mt-2 text-sm text-gray-400">html</h3>
-        </a>
-      </div>
     </div>
 
     <div class="bg-gray-100 w-full h-[98px] mt-[120px]">
       <div class="max-w-[688px] mx-auto">
-        <div class="flex items-center justify-between py-10">
+        <div class="flex items-center justify-between py-10 p-5 md:pl-0 md:pr-0 ">
           <div>
             <p class="text-[12px] text-gray-700">Laksh Tyagi 2022</p>
           </div>
