--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="flex items-center gap-4">
           <img class="w-24 rounded-full" src="./img/Potrait.JPG" />
           <div class="flex flex-col gap-0.5">
-            <h3 class=" text-[24px] md:text-[36px] text-gray-900 font-medium">Laksh Tyagi</h3>
-            <p class="text-[16px] md:text-[20px] text-gray-700 font-regular">
+            <h3 class=" text-[24px] md:text-[36px] font-medium">Laksh Tyagi</h3>
+            <p class="text-[16px] md:text-[20px] text-gray-500 font-regular">
               Product Designer
             </p>
           </div>
@@ -54,10 +54,10 @@
       <div class="flex flex-col">
         <p class="font-regular text-[28px] mt-[100px]">Project</p>
         <div class="grid grid-cols-10 gap-8 mt-[15px] items-center">
-          <div class=" col-span-10 md:col-span-4">
-          <video width="100%" height="100%" autoplay="" playsinline="" muted="" loop="" class=" w-3/4 md:w-full"><source src="./img/vid.mp4" type="video/mp4"></video>
+          <div class=" col-span-10 md:col-span-5">
+            <img  src="./img/identification.png" alt="Dosage image" >
           </div>
-          <div class="col-span-10 md:col-span-6 inline-block">
+          <div class="col-span-10 md:col-span-5 inline-block">
             <h3 class="text-[28px] text-gray-900">Type1</h3>
             <p class=" font-light text-[18px] text-gray-700 mt-[15px]">
               Type1 eases diabtes by using seamless UI to get insulin doses with
