--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="flex flex-col gap-0.5">
             <h3 class=" text-[24px] md:text-[36px] font-medium">Laksh Tyagi</h3>
             <p class="text-[16px] md:text-[20px] text-gray-500 font-regular">
-              Product Design
+              Product Designer
             </p>
           </div>
         </div>
