--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </p>
           </div>
         </div>
-        <div class="grid grid-cols-3 gap-x-4 max-w-[250px]">
+        <div class="grid grid-cols-4 gap-4 grid-flow-col">
           <a href="https://dribbble.com/Laksh-Tyagi">
             <img class="w-[24px] h-[24px] opacity-40 hover:opacity-60" src="./img/Dribbble1.svg" />
           </a>
@@ -37,6 +37,9 @@
               class="w-[24px] h-[24px] opacity-40 hover:opacity-60"
               src="./img/Linkdin1.svg"
             />
+          </a>
+          <a href="https://github.com/LakshTyagi07" >
+            <img class="w-[24px] h-[24px] opacity-40 hover:opacity-60" src="./img/githubIcon.png" />
           </a>
         </div>
       </div>
