--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
               a snapshot.
             </p>
             <p class="font-light text-[18px] text-gray-400  mt-[15px]">
+              - Founder
+            </p>
+            <p class="font-light text-[18px] text-gray-400  mt-[15px]">
               - Product & Brand Design
             </p>
             <div class="flex  gap-2  mt-[40px]">
