--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
       </div>
       <div class="mt-[60px]">
         <p class="font-light text-[14px] md:text-[18px] md:leading-7 items-center mt-[60px]">
-          Growing up with a passion for design, I have always had a unique eye
-          to explore ideas. Design cannot be perfect but there stands a
-          perpetual space for refinement.
+          I’m an ambitious product designer who wants to contribute towards making impactful changes in human experience. Design can never be perfect but there is a perpetual space for constant refinement. Inspired by Dieter Rams’ work,
+          I have a desire to solve complicated problems using simple experiences through a blend in technology and design.
         </p>
         <p class="font-light text-[14px] md:text-[18px] md:leading-7 mt-[40px]">
           I am a CS & Design Undergraduate at Northeastern University and a design intern at samespace. I look forward to get some collabrative experience which will help enhance my skillset and understanding for the real world.
