--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
       </div>
       <div class="mt-[60px]">
         <p class="font-light text-[14px] md:text-[18px] md:leading-7 items-center mt-[60px]">
-          I’m an ambitious product designer who wants to contribute towards making impactful changes in human experience. Design can never be perfect but there is a perpetual space for constant refinement. Inspired by Dieter Rams’ work,
-          I have a desire to solve complicated problems using simple experiences through a blend in technology and design.
+          I’m an ambitious product designer who wants to contribute towards making impactful changes in human experience.
+          Design can never be perfect but there is a perpetual space for constant refinement. Inspired by Dieter Rams’ work,
+          I have a desire to solve complicated problems by creating simple experiences through a blend in technology and design.
         </p>
       </div>
 
