--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="mt-[60px]">
         <p class="font-light text-[14px] md:text-[18px] md:leading-7 items-center mt-[60px]">
           I’m an ambitious product designer who wants to contribute towards making impactful changes in human experience. 
-          Inspired by Dieter Rams’ work, I strive to solve complicated problems by creating simple experiences through a blend in technology and design.
+          Inspired by the work of Steve Jobs and Dieter Rams, I strive to solve complicated problems by creating simple experiences through a blend in technology and design.
         </p>
       </div>
 
