--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="max-w-[687px] w-full mx-auto p-5 md:p-0 ">
       <div class="flex items-center justify-between py-10">
         <div class="flex items-center gap-4">
-          <img class="w-24 rounded-full" src="./img/Potrait.JPG" />
+          <img class="w-24 rounded-full" src="./img/Potrait.png" />
           <div class="flex flex-col gap-0.5">
             <h3 class=" text-[24px] md:text-[36px] font-medium">Laksh Tyagi</h3>
             <p class="text-[16px] md:text-[20px] text-gray-500 font-regular">
